<resources>
    <string name="app_name">SmartCommute</string>
    <string name="title_commute_detail">Commute Details</string>
    <string name="commute_name">Commute Name:</string>
    <string name="arr_time">Arrival Time:</string>
    <string name="prep_time">Preparation Time:</string>
    <string name="destination">Destination:</string>
    <string name="add_new_commute">Add New Commute</string>
    <string name="edit_commute">Edit Commute</string>
    <string name="delete_commute">Delete Commute</string>
    <string name="choose_arr_time">Choose Arrival Time</string>
    <string name="choose_prep_time">Choose Preparation Time</string>
    <string name="ringTone">Alarm Tone:</string>
    <string name="ringToneButtonText">Choose Alarm Tone</string>
    <string name="choose_destination">Choose Destination</string>
    <string name="enter_commute_name">Enter Commute Name</string>
    <string name="days_of_week">Days of the Week:</string>
    <string name="repeat">Repeat Weekly</string>
    <string name="days">Days:</string>
    <string name="alarm">Alarm!</string>
    <string name="edit">Edit</string>
    <string name="alarmDepart">Begin Departure</string>
    <string name="alarmWakeUp">Wake Up!</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>
</resources>
