<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:text="@string/commute_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:padding="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:id="@+id/editTextCommuteID" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/arr_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:padding="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/selectedArrTime"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:text="@string/choose_arr_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chooseArrTimeButton" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/prep_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:padding="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/selectedPrepTime"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:text="@string/choose_prep_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choosePrepTimeButton" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:padding="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/selectedDestination"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:text="@string/choose_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chooseDestButton" />

    <Button
        android:text="@string/add_new_commute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addCommuteButton"
        android:background="@android:color/holo_green_dark"
        android:layout_marginTop="15dp" />
</LinearLayout>