<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jeffrey.finalprototype.CommuteDetailFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/commute_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_weight="1"
            android:paddingStart="5dp" />

    </LinearLayout>

    <TextView
        android:text="Work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/arr_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_weight="1"
            android:paddingStart="5dp" />

    </LinearLayout>

    <TextView
        android:text="9:00 AM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/prep_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_weight="1"
            android:paddingStart="5dp" />

    </LinearLayout>

    <TextView
        android:text="30 min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_weight="1"
            android:paddingStart="5dp" />

    </LinearLayout>

    <TextView
        android:text="100 Institute Road, Worcester MA 01609"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/repetition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_weight="1"
            android:paddingStart="5dp" />

    </LinearLayout>

    <TextView
        android:text="None"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <CheckBox
        android:text="Alarm Active"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/AlarmCheckbox"
        android:layout_weight="1"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/edit_commute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editButton"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="20dp" />

    <Button
        android:text="@string/delete_commute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="10dp" />

</LinearLayout>